--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,3 +11,6 @@ jobs:
       - run:
           name: Print the Current Time
           command: date
+      - run:
+          name: Run robot framework
+          command: robot googlesearch.robot
