--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,6 @@
-version: 2
-jobs:
-  build:
-    docker:
-      - image: debian:stretch
-    steps:
-      - checkout
-      - run:
-          name: Greeting
-          command: echo Hello, world.
-      - run:
-          name: Print the Current Time
-          command: date
-      - run:
-          name: Run robot framework
-          command: robot googlesearch.robot
+test:
+    override:
+      - pybot -n non-critical -d "robot_results" -o "../discard/output.xml" ./selenium
+general:
+    gartifacts:
+      - "robot_results"
