--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,27 @@
-version: 2.1
+version: 2
+jobs:
+  build:
+      docker:
+        - image: circleci/python:3.7.4
+      steps:
+        - checkout
+        - run:
+            name: Install Python Dependencies
+            command: |
+              python3 -m venv venv
+              . venv/bin/activate
+              pip install -r requirements.txt
+        - save_cache:
+            paths:
+              - ./venv
+            key: v1-dependencies-{{ checksum "requirements.txt" }}
+        
+        - run:
+            name: run tests
+            command: |
+              . venv/bin/activate
+              robot ./selenium/googlesearch.robot
 
-machine:
-  python:
-    # Python version to use - Selenium requires python 3.0 and above
-    version: pypy-3.6.0orbs:
-dependencies:
-  pre:
-    - pip install selenium
-    - pip install robotframework
-    - pip install robotframework-selenium2library
-    - pip install robotframework-requests
-test:
-  override:
-    - robot -d ./selenium/googlesearch.robot
+        - store_artifacts:
+            path: test-reports
+            destination: test-reports
