--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
         - save_cache:
             paths:
               - ./venv
-            key: v1-dependencies-{{ checksum "requirements.txt" }}
+            key: v1-dependencies-{{ checksum "./.circleci/requirements.txt" }}
         
         - run:
             name: run tests
