--- a/.circleci/requirements.txt
+++ b/.circleci/requirements.txt
@@ -1,7 +1,8 @@
+install --upgrade pip
 robotframework
 robotframework-selenium2library
 robotframework-requests
-install sst == 0.2.4
+install sst==0.2.4
 install splinter
 pylint == 2.4.3
 pytest == 5.2.2
