change config file last

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,5 +23,7 @@ jobs:
               robot ./selenium/googlesearch.robot
 
         - store_artifacts:
-            path: test-reports
+            path: test-reports/
             destination: test-reports
+        - store_test_results:
+            path: test-reports/
