--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ jobs:
         - image: circleci/python:3.6.2-stretch-browsers
       steps:
         - checkout
+        - run: mkdir test-reports
         - run:
             name: Install Python Dependencies
             command: |
