--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,12 @@
 version: 2
+nightly:
+    triggers: #use the triggers key to indicate a scheduled build
+      - schedule:
+          cron: "30 16 * * *" # use cron syntax to set the schedule
+          filters:
+            branches:
+              only:
+                - master
 jobs:
   build:
       docker:
