--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,13 @@
 version: 2
 jobs:
   build:
-    nightly:
-      triggers: #use the triggers key to indicate a scheduled build
-        - schedule:
-          cron: "20 17 * * *" # use cron syntax to set the schedule
     docker:
       - image: circleci/python:3.6.2-stretch-browsers
     steps:
       - checkout
-      - run: mkdir test-reports
+      - run:
+          name: Create test-reports directory
+          command: mkdir test-reports
       - run:
           name: Install Python Dependencies
           command: |
@@ -20,31 +18,33 @@ jobs:
           paths:
             - ./venv
           key: v1-dependencies-{{ checksum "./.circleci/requirements.txt" }}
-      
+  test:
+    docker:
+      - image: circleci/python:3.6.2-stretch-browsers
+    steps:
       - run:
           name: run tests
           command: |
             . venv/bin/activate
             robot -d test-reports ./selenium/googlesearch.robot
-
       - store_artifacts:
           path: test-reports/
           destination: test-reports
       - store_test_results:
           path: test-reports/
-
 workflows:
   version: 2
   commit:
     jobs:
       - build
+      - test
   nightly:
     triggers:
       - schedule:
-          cron: "2 * * * *"
+          cron: "1 * * * *"
           filters:
             branches:
               only:
                 - master
     jobs:
-      - build
+      - test
